--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -21,6 +21,7 @@ security:
             entry_point: App\Security\AppAuthenticator
             logout:
                 path: app_logout
+                invalidate_session: true
                 # where to redirect after logout
                 # target: app_any_route
             remember_me:
